gettext_args = [
    '--package-name=@0@'.format(meson.project_name()),
    '--package-version=@0@'.format(meson.project_version()),
    '--copyright-holder=Copyright © 2008 - 2020 blueman project',
     '--msgid-bugs-address=https://github.com/blueman-project/blueman/issues'
]

i18n.gettext(
    package_name,
    preset: 'glib',
    args: gettext_args
)
