SUBDIRS = 	\
	applet	\
	manager

bluemandir = $(pythondir)/blueman/gui
blueman_PYTHON = MessageArea.py Animation.py CellRendererPixbufTable.py GsmSettings.py CommonUi.py DeviceList.py DeviceSelectorDialog.py DeviceSelectorList.py DeviceSelectorWidget.py GenericList.py GtkAnimation.py __init__.py Notification.py PixbufTable.py NstBluetooth.py

CLEANFILES =		\
	$(BUILT_SOURCES)
	
DISTCLEANFILES = \
	$(CLEANFILES) 

clean-local:
	rm -rf *.pyc *.pyo 

